--- a/wiki/CIFInfrastructureDiagram.wiki
+++ b/wiki/CIFInfrastructureDiagram.wiki
@@ -2,6 +2,8 @@
 
 = Introduction =
 
+cifv1 is architected in a way that allows it's major components to be distributed among many hosts when a single host becomes resource constrained. 
+
 === Key ===
 
 ==== cif-client ====
