Edited wiki page CIFInfrastructureDiagram through web user interface.

--- a/wiki/CIFInfrastructureDiagram.wiki
+++ b/wiki/CIFInfrastructureDiagram.wiki
@@ -50,7 +50,7 @@ When you hit resource constraints with one server, it is likely the first compon
 
 With three or more servers you can dedicate servers per component. This allows you to add additional servers as needed. 
 
-This also gives high availability capabilities as demonstrated below with DNS round robin between two cif-routers and a postgresql in a master / slave configuration. 
+This also gives high availability capabilities as demonstrated below with a load balancer in front of the two cif-routers and a postgresql in a master-slave configuration. 
 
 You may notice that postgresql could become the ultimate bottleneck when dealing with big data. In cifv2 HBase will be a optional data store, stay tuned! 
 
