--- a/wiki/CIFInfrastructureDiagram.wiki
+++ b/wiki/CIFInfrastructureDiagram.wiki
@@ -48,7 +48,7 @@ When you hit resource constraints with one server, it is likely the first compon
 
 == Six servers ==
 
-With three or more servers you can dedicate servers per component. This allows you to add additional servers as needed. 
+With three or more servers you can dedicate one or more servers per component. This allows you to add additional resources as needed.
 
 This also gives high availability capabilities as demonstrated below with a load balancer in front of the two cif-routers and a postgresql in a master-slave configuration. 
 
