--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,7 +1,7 @@
  * Help
   * [FAQ]
   * [http://groups.google.com/group/ci-framework Discussion Group]
- * v0 (Stable)
+ * v0 (Current - stable)
   * [Server_v0 Server]
    * [ServerInstall_v0 Server Install]
    * [ServerBackup_v0 Backup]
