--- a/wiki/ClientInstall_OSX7_v1.wiki
+++ b/wiki/ClientInstall_OSX7_v1.wiki
@@ -9,8 +9,6 @@ This assumes you're using macports (could be adapted for homebrew)
 = Details =
 == Caveats ==
 ----
-=== Mac Ports ===
- # make sure macports (or homebrew) is up to date
 === Xcode ===
  # install latest version of xcode from the app store
  # make sure the command line tools are installed (via preferences, ... downloads, ... components)
@@ -18,19 +16,14 @@ This assumes you're using macports (could be adapted for homebrew)
 {{{
 sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer/
 }}}
- # re-install perl5 if you're using mac ports (or homebrew) so they know where the new compiler is
 == Dependencies ==
 ----
- # install some of the base deps
-{{{
-$ sudo port install p5-uuid p5-digest-sha p5-digest-sha1 p5-log-dispatch p5-list-moreutils p5-datetime
-}}}
- # the perl OSSP::uuid bindings must be installed from source into /opt/local (for macports)
+ # the perl OSSP::uuid bindings must be installed from source
 {{{
 $ wget ftp://ftp.ossp.org/pkg/lib/uuid/uuid-1.6.2.tar.gz
 $ tar -zxvf uuid-1.6.2.tar.gz
 $ cd uuid-1.6.2
-$ ./configure --prefix=/opt/local --with-perl
+$ ./configure --with-perl
 $ make
 $ sudo make install
 }}}
@@ -40,7 +33,7 @@ $ perl -e 'use OSSP::uuid'
 }}}
  # install the CPAN modules
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::SSLeay, Compress::Snappy, Net::Patricia, Iodef::Pb::Simple, DateTime::Format::DateParse, Config::Simple'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::SSLeay, Compress::Snappy, Net::Patricia, Iodef::Pb::Simple, DateTime::Format::DateParse,Digest::SHA,Log::Dispatch,List::MoreUtils,DateTime'
 }}}
  # update config-simple-perl manually (something's wrong where 4.59 won't update on OS X)
 {{{
