Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -55,6 +55,7 @@
   * Server
    * [ServerInstall_v1 Server Install v1]
    * [ServerInstall_v1_MigrateApikeys API key migration]
+   * [CIFInfrastructureDiagram CIF Infrastructure Diagram]
   * [ClientInstall_v1 Client Install]
   * API
   * Taxonomy
