--- a/wiki/CIFInfrastructureDiagram.wiki
+++ b/wiki/CIFInfrastructureDiagram.wiki
@@ -1,6 +1,6 @@
 #summary Diagrams of different infrastructure layouts
 
-= Introduction =
+= CIFv1 Infrastructure Diagram =
 
 cif v1 is architected in a way that allows it's major components to be distributed among many hosts when a single host becomes resource constrained. 
 
