--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -52,7 +52,7 @@
    * [Tools_crontool_v0 CIF Crontool]
    * [Tools_cif_apikeys_v0 CIF Apikeys]
  * v1 (Development -- testing)
-  * Server
+  * [WhatisCIF Server]
    * [ServerInstall_v1 Server Install v1]
    * [ServerInstall_v1_MigrateApikeys API key migration]
    * [CIFInfrastructureDiagram CIF Infrastructure Diagram]
