--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -55,6 +55,7 @@
   * [WhatisCIF Server]
    * [ServerInstall_v1 Server Install v1]
    * [ServerInstall_v1_MigrateApikeys API key migration]
+   * [ServerBackup_v1 Backup]
    * [CIFInfrastructureDiagram CIF Infrastructure Diagram]
   * [ClientInstall_v1 Client Install]
   * API
