--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -57,6 +57,7 @@
    * [CIFInfrastructureDiagram CIF Infrastructure Diagram]
    * [ServerBackup_v1 Backup]
    * [GroupSupport_v1 Group Support]
+   * [RTCIFMinimal_v1 RT Plugin]
    * [ServerInstall_v1_MigrateApikeys API key migration]
   * [ClientInstall_v1 Client Install]
   * API
