Edited wiki page Feeds_v0 through web user interface.

--- a/wiki/Feeds_v0.wiki
+++ b/wiki/Feeds_v0.wiki
@@ -1,4 +1,5 @@
 #summary the basics about datasets and feeds (v0)
+#labels Version-0
 = Introduction =
 
 This describes the various dynamically generated data-sets within the framework. These data-sets can be used as:
