Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -66,7 +66,7 @@
    * [TaxonomyAssessment_v1 Assessment Definitions]
    * [TaxonomyConfidence_v1 Confidence Definitions]
    * [TaxonomySeverity_v1 Severity Definitions]
-  * Feeds
+  * [Feeds_v1 Feeds]
   * [FAQ_v1 FAQ]
  * Other
   * [ProjectsLab]
