--- a/wiki/Feeds_v1.wiki
+++ b/wiki/Feeds_v1.wiki
@@ -14,15 +14,16 @@ This describes the various dynamically generated data-sets within the framework.
 
 Before you begin, make sure you review the [Taxonomy_v1 Taxonomy] page. This will help with measuring your risk tolerance and which feed combinations you should use.
 
-The simplest feed to get started with is the [FeedsBotnet#Infrastructure botnet Infrastructure] feed. Typically botnet infrastructure is tagged with a severity of [TaxonomySeverity_v0#High high], meaning, if you combine this with a [TaxonomyConfidence_v0#85_-_94 high confidence] (85-100) observation, it's likely that you're dealing with a compromised host.
+The simplest feed to get started with is the [FeedsBotnet#Infrastructure botnet Infrastructure] feed. 
+
 = Output Plugins =
 The perl-client has a number of "output plugins" available:
 {{{
 $ cif -h
-Usage: perl /opt/local/bin/cif -q xyz.com
+Usage: perl /opt/cif/bin/cif -q xyz.com
 
 ...
-    -p  --plugin:           output plugin (html,bindzone,table,snort,iptables,pcapfilter,csv,raw), default: table
+-p  --plugin:           output plugin ('Table','Snort','Csv'), default: Table
 }}}
 
 This functionality allows feeds to be written out in other formats removing the need to "parse and convert" the feeds to meet your target device requirements. These formats include:
