Edited wiki page Feeds_v1 through web user interface.

--- a/wiki/Feeds_v1.wiki
+++ b/wiki/Feeds_v1.wiki
@@ -1,7 +1,12 @@
 #summary the basics about datasets and feeds (v1)
 #labels Version-1
 
-= <font color="red">Unstable</font> =
+<font color="red">
+
+= Unstable = 
+ * update section under details
+
+</font>
 
 = Introduction =
 
