--- a/wiki/FeedsFAQ_v1.wiki
+++ b/wiki/FeedsFAQ_v1.wiki
@@ -4,3 +4,5 @@ Frequently Asked Questions about Feeds.
 <wiki:toc max_depth="3" />
 
 === When I try to pull a feed, no data is returned? ===
+
+1. Ensure you have [ServerInstall_v1#Enabling_Feed_Generation Enabled Feed Generation]
