--- a/wiki/FeedsFAQ_v1.wiki
+++ b/wiki/FeedsFAQ_v1.wiki
@@ -5,4 +5,5 @@ Frequently Asked Questions about Feeds.
 
 === When I try to pull a feed, no data is returned? ===
 
-1. Ensure you have [ServerInstall_v1#Enabling_Feed_Generation Enabled Feed Generation]
+ 1. Ensure you have [ServerInstall_v1#Enabling_Feed_Generation Enabled Feed Generation]
+ 1. Ensure you have [ServerInstall_v1#With_Feeds generated the first batch of feeds]
