Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -67,7 +67,7 @@
    * [TaxonomyConfidence_v1 Confidence Definitions]
    * [TaxonomySeverity_v1 Severity Definitions]
   * [Feeds_v1 Feeds]
-   * [FeedConfig_v1 Feed Config
+   * [FeedConfig_v1 Feed Config]
    * [FeedsFAQ_v1 Feed FAQ]
   * [FAQ_v1 FAQ]
  * Other
