--- a/wiki/FeedConfig_v1.wiki
+++ b/wiki/FeedConfig_v1.wiki
@@ -31,16 +31,16 @@ CIF comes with a variety of pre-built feed configurations, with that there are m
 || address || <string> || This is usually a IP address, URI or domain that are found in feeds of data but is not limited to those data types|| yes ||
 || alternativeid || <string> || usually a url pointing to the original data point (as a reference id) || no ||
 || alternativeid_restriction || <string> || public, default, need-to-know,private || no ||
-|| confidence || <int> || see [TaxonomyConfidence_v0 Confidence] || no ||
+|| confidence || <int> || see [TaxonomyConfidence_v1 Confidence] || no ||
 || description || <string> || short (1-2 space delimited word) description of the activity (eg: tdss spyeye) || no ||
 || detection || <string> || hourly/daily: what to "fuzz" the detection string to || no ||
 || detecttime || <string> || Most common timestamp formats are valid || no ||
 || disabled || <string> || true, false || no ||
-|| feed || <uri><filename> || {{{http://example.com/feed.csv}}} or /tmp/feed.csv || no ||
+|| feed || <uri><filename> || {{{http://example.com/feed.csv}}} or /tmp/feed.csv || yes ||
 || feed_user || <string> || username (Basic authentication) || no ||
 || feed_password || <string> || password (Basic authentication) || no ||
 || guid || <string> || default: 'everyone' unless you know what you're doing || no ||
-|| impact || <string> || see [TaxonomyImpact_v0 Impact] || no ||
+|| assessment || <string> || see [TaxonomyAssessment_v1 Assessment] || no ||
 || malware_md5 || <string> || MD5sum of malicious file || no ||
 || malware_sha1 || <string> || SHA1sum of malicious file || no ||
 || mirror || <string> || file path (eg: mirror = '/tmp'), allows for testing to see if the downloaded feed has changed before re-downloading || no ||
@@ -49,7 +49,7 @@ CIF comes with a variety of pre-built feed configurations, with that there are m
 || protocol || <int><string> || 6 or tcp, 17 or udp || no ||
 || portlist || <int> || 22,25,80 || no ||
 || restriction || <string> || public, default, need-to-know, private || no ||
-|| severity || <string> || see [TaxonomySeverity_v0 Severity] || no ||
+|| severity || <string> || see [TaxonomySeverity_v1 Severity] || no ||
 || source || <string> || source of the feed, usually the domain where the feed is from (eg: example.com) || no ||
 || zip_filename || <string> || when the feed is a zip file, this should identify what the zip header is || no ||
 
